mule-user-guide/v/3.8/mule-application-deployment-descriptor.adoc
=  Mule应用程序部署描述符
:keywords: esb, deploy, configuration

Mule的部署描述符是一个属性文件（`mule-deploy.properties`），用于控制如何部署Mule应用程序。然而，典型的应用程序很少需要使用文件中的许多配置属性，而是依赖于默认值。

[WARNING]
如果您通过 link:/mule-user-guide/v/3.8/shared-resources[共享资源]结构部署多个应用程序，则不应在属性文件中设置任何内容，因为共享域的各种应用程序之间可能存在冲突。相反，您可以在部署的应用程序，其域以及该域下的其他应用程序的范围内设置环境变量。在Studio中，您可以通过*Run Configurations menu*的*Environment tab*创建这些变量，可以通过播放按钮旁边的下拉菜单访问这些变量。

Mule会检查应用程序根目录中是否有部署描述符文件，并在可用时使用它（这是可选的）。

以下是部署描述符中支持的配置属性列表：

[%header,cols="34,33,33"]
|===
| {名称{1}}说明 |缺省
|域 |此应用程序的域名。通常用于在应用程序之间共享公共库和配置。请参阅 link:/mule-user-guide/v/3.8/shared-resources[共享资源]  | "default"
| config.resources  |此应用程序的逗号分隔的配置文件名列表。典型的用法是声明式地支持分割配置。另一种方法是使用默认的`mule-config.xml`文件导入额外的配置文件。监控所有配置文件的重新部署情况。如果没有其他指定，则使用来自应用根目录的 | `mule-config.xml`
| redeployment.enabled  |允许显式禁用应用程序热重新部署。在`$MULE_HOME/apps`中删除新版本的应用程序归档文件仍将重新部署应用程序。 `true, yes, on`以外的任何值均被视为`false`并禁用配置更改监视器。 |默认情况下启用
|编码 |缺省编码，如果没有明确指定，则在整个应用程序中使用，例如。一个变压器 | UTF-8
| config.builder  |用于解析应用程序配置文件的配置生成器。 | AutoConfigurationBuilder
| scan.packages（因为Mule 3.1） |应用程序的类路径不再扫描iBeans注释（`@Call`，`@Template`和`@IBeanGroup`）。常规的Mule注释（例如，`@Transformer`仍然有效）。要重新激活类路径扫描，请配置包名的逗号分隔列表以在启动时扫描注释。 |默认为空
| loader.override  |覆盖默认的类加载。属性值被指定为逗号分隔的类，包或两者的列表。使用 - （破折号/减号），也可以通过在列表中的类或包之前指定阻塞。如果在阻塞列表中指定了类，则其查找只在应用程序或插件中执行，而不在Mule中执行。有关详细信息，请参阅 link:/mule-user-guide/v/3.8/classloader-control-in-mule[Mule中的类加载器控制]。 |默认为空
|  log.configFile
|  `log4j2.xml`配置文件的位置，用于设置日志的各种参数，例如同步与异步。请参阅 link:/mule-user-guide/v/3.8/logging-in-mule[登录Mule]。
|  `MULE_HOME/conf`
|===

需要注意两点：

* 类加载器域可以为不同的应用程序集提供同一个库的不同版本。
* 除非另有说明，否则使用默认域。您可以使用应用程序部署描述符中的`domain`属性指定自定义域。

以下是一个简单部署配置文件的内容示例：

[source, code, linenums]
----
redeployment.enabled=true
encoding=UTF-8
domain=default
config.resources=sfdc-outbound-messaging-example.xml
----

== 选项

应用程序还可能在应用程序根目录中（`mule-deploy.properties`文件旁边）包含一个`mule-app.properties`文件。 `mule-app.properties`文件是放置应用程序的任何自定义属性的地方。 Mule将使它们在注册表中可用，并且可以通过两种方式访问​​它们：

* 在应用程序启动时在配置文件中。使用`${foo`}占位符（或可以到达注册表的任何Mule表达式）来查找`foo`值。
* 在代码中（例如，通过实现`MuleContextAware`）。然后通过`muleContext.getRegistry()`访问注册表ref。然后，您可以在此实例上使用任何合适的查找方法。

在Mule中== 类加载

有关Mule中的类加载的详细信息，请参阅 link:/mule-user-guide/v/3.8/classloader-control-in-mule[Mule中的类加载器控制]。



域中的== 部署描述符

与在应用程序中一样，您可以在 link:/mule-user-guide/v/3.8/shared-resources[一个域名项目]的`src/main/domain`文件夹中添加`mule-deploy.properties`。此部署描述符文件仅支持以下属性：


[%header,cols="34,33,33"]
|===
| {名称{1}}说明 |缺省
| redeployment.enabled  |允许显式禁用域热重新部署。在`$MULE_HOME/apps`中删除新版本的域存档仍将重新部署域。 `true, yes, on`以外的任何值均被视为`false`并禁用配置更改监视器。 |默认情况下启用
| loader.override  |覆盖默认的类加载。属性值被指定为逗号分隔的类，包或两者的列表。使用 - （破折号/减号），也可以通过在列表中的类或包之前指定阻塞。如果在阻止列表中指定了类，则其查找只在域或插件中执行，而不在Mule中执行。有关详细信息，请参阅 link:/mule-user-guide/v/3.8/classloader-control-in-mule[Mule中的类加载器控制]。 |默认为空
|===
